# kursovaya_5

./: .gitignore  README.md  pyproject.toml
src/: APIs_classes.py  class_DBManager.py  funcs.py  job_classes.py  main.py  queries.sql  saver.py  utils.py
