[tool.poetry]
name = "kursovaya-4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kursovaya_4"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
psycopg2 = "^2.9.6"
dbmanager = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
